[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "powernap"
version = "0.0.0"
description = "A small REST client that refills your batteries"
authors = ["Joachim Jablon <ewjoachim@gmail.com>"]
license = "MIT License"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
]
keywords = ["rest", "httpx"]
repository = "https://github.com/ewjoachim/powernap"
packages = [{include = "powernap"}]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "*"
typing-extensions = "*"

[tool.poetry.group.lint.dependencies]
ruff = "*"
pyright = "*"

[tool.poetry.group.tests.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-call-checker = "^1.0.5"

[tool.poetry-dynamic-versioning]
enable = true
pattern = '(?P<base>\d+\.\d+\.\d+)'

[tool.pytest.ini_options]
addopts = """
    --cov-report term-missing --cov-branch --cov-report html --cov-report term
    --cov=powernap -vv --strict-markers -rfE
"""
testpaths = ["tests"]


[tool.coverage.run]
relative_files = true

[tool.ruff]
extend-exclude = [".venv"]

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "I",   # isort
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "RUF", # ruff
]
fixable = ["ALL"]
extend-ignore = [
    "E501", # line too long
    # It's not exactly false but it's not supported enough by our dependencies,
    # so ruff is fighting with Pyright on this.
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pyright]
exclude = ["tests", ".venv"]
